# fyp_cluster

./: .gitignore  README.md  config.toml  controller.sh  pyproject.toml  reset_ethernet_dhcp.sh  st7735test.py  worker.sh
src/common/: config.py  model.py  network.py  util.py
src/controller/: controller.py  network_manager.py  workers_websocket_manager.py
src/controller/templates/: demo251208.html  index.html
src/controller/tmp/: demo251208.py
src/worker/: .obsolete_control_api.py  network_manager.py  websocket_server.py  worker.py
src/worker/inference/: inference_engine.py  model_adapter_template.py
src/worker/inference/engines/: hailo_engine.py  onnx_engine.py
src/worker/inference/models/yolov4/: yolov4_adapter.py
src/worker/inference/models/yolov8_barcode/: yolov8_barcode.onnx
src/worker/tmp/: demo251208.py
tests/worker/: barcode.py  yolov4_test.py
