[project]
name = "fyp-cluster"
version = "0.1.0"
description = ""
authors = [
    {name = "SyntaxaR",email = "83219306+SyntaxaR@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "fyp_cluster", from = "src"}]

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
